# competitive

./: CMakeLists.txt  TODO  git-push.sh  requirements  ž
books/clrs-solutions/: CLRS.html
contests/1/4/: 4  (+3 more)
notes/: IO  erathostenes sieve  euclid  graph_searching  graphs  misc  notes  speed
problems/ciode-2009-opstinsko/: ciode.cpp  example1.input  generate_primes.py  primes
problems/faraon-2009-opstinsko/: faraon.cpp
problems/kondenzatori-2009-opstinsko/: kondenzatori.cpp
problems/mala-matrica-2018-kvalifikacije/: mala_matrica.cpp
problems/nagrade-2018-kvalifikacije/: example1.input  generate_primes.py  nagrade.cpp  primes  ž
problems/najblizi-neopadajuci-2018-kvalifikacije/: najblizi_neopadajuci.cpp
problems/palindromi-2009-opstinsko/: example1.input  example2.input  palindromi.cpp
problems/prodavnice-2018-kvalifikacije/: example1.input  example2.input  prodavnice.cpp
problems/prva-cifra-2018-kvalifikacije/: prva_cifra.cpp
problems/ringispil/: example2.input  example3.input  example5.input  generate_input.py  ringispil.cpp  two_rotations.input
problems/ringispil-2009-opstinsko/: example1.input  example4.input  ringispil.cpp  three_rotations.input
problems/rubik-2009-opstinsko/: rubik.cpp
problems/sportski-centar-2017-kvalifikacije/: analysis
problems/topla-voda-2018-kvalifikacije/: example1.input  example2.input  topla_voda.cpp
problems/transformacija-matrice-2018-kvalifikacije/: example1.input  example2.input  transformacija-matrice.html  transformacija_matrice.cpp
problems/trivijalan-broj-2018-kvalifikacije/: e not specified, returns the natural logarithm (base e) of x.  generate_primes.py  generate_trivial_numbers.py  primes  trivijalan_broj.cpp
src/: factorial.h  gcd.h  utils.h
src/benchmarks/: cout.cpp
src/problems/: ringispil.cpp  ringispil.example.input
src/tests/: test_gcd.cpp
uva/10038 - Jolly Jumpers/: jolly  jolly.cpp
uva/10131 - Is Bigger Smarter/: smart.cpp
uva/10264 - The Most Potent Corner/: corner  corner.cpp
uva/10337 - Flight Planner/: in  in2  out1  out2  plan  plan.cpp
uva/10341 - Solve It/: in  in2  solve  solve.cpp
uva/10400 - Game Show Math/: game  game.cpp  in
uva/10487 - Closest Sums/: fast  fast.cpp
uva/10503 - The dominoes solitaire/: dominoe  dominoe.cpp
uva/10567 - Helping Fill Bates/: bates  bates.cpp  in  in1
uva/10616 - Divisible Group Sums/: sums.cpp
uva/10656 - Maximum Sum (II)/: msum  msum.cpp  out1
uva/10684 - The jackpot/: in  in1  jack  jack.cpp
uva/10718 - Bit Mask/: all  all.cpp  bit  bit.cpp  check  check.py  in  out1
uva/10755 - Garbage Heap/: garb.cpp
uva/108 - Maximum Sum/: sum  sum.cpp
uva/10819 - Trouble of 13-Dots/: dots  dots.cpp  in
uva/10827 - Maximum sum on a torus/: tor  tor.cpp
uva/10895 - Matrix Transpose/: in1  in2  in6  in7  trans  trans.cpp
uva/10943 - How do you add/: add  add.cpp  in
uva/10954 - Add All/: add  add.cpp  ez.py
uva/11057 - Exact Sum/: exact  exact.cpp  in  in1  out1
uva/11085 - Back to the 8-Queens/: generate.py  queens  queens.cpp  valid_combinations
uva/111 - History Grading/: grade.cpp
uva/11100 - The Trip, 2007/: in  in1  in2  trip  trip.cpp
uva/11136 - Hoax or what/: hoax  hoax.cpp  in
uva/11157 - Dynamic Frog/: frog.cpp
uva/11173 - Grey Codes/: grey_codes  grey_codes.cpp
uva/11235 - Frequent values/: freq  freq.cpp  in
uva/11264 - Coin Collector/: check.py  coin  coin.cpp  in  in1  out1
uva/11286 - Conformity/: conform  conform.cpp
uva/11292 - Dragon of Loowater/: dragon  dragon.cpp  in
uva/11340 - Newspaper/: news  news.cpp
uva/11389 - The Bus Driver Problem/: bus  bus.cpp  in
uva/11402 - Ahoy, Pirates!/: ahoy.cpp
uva/11413 - Fill the Containers/: cases  in  out1  out2  testcases.py  v1  v1.cpp  v2  v2.cpp  ž
uva/11572 - Unique Snowflakes/: in  snow  snow.cpp
uva/11790 - Murcia's Skyline/: in1  in3  sky  sky.cpp
uva/11849 - CD/: cd  cd.cpp
uva/11933 - Splitting Numbers/: splitting  splitting.cpp
uva/1196 - Tiling Up Blocks/: tile  tile.cpp
uva/11991 - Easy Problem from Rujia Liu/: in  prob  prob.cpp
uva/11995 - I Can Guess the Data Structure!/: guess  guess.cpp
uva/1203 - Argus/: argus  argus.cpp
uva/12032 - The Monkey and the Oiled Bamboo/: in  monkey  monkey.cpp
uva/12192 - Grapevine/: in  vine  vine.cpp
uva/12210 - A Match Making Problem/: in  match  match.cpp
uva/12356 - Army Buddies/: buddies  buddies.cpp
uva/1237 - Expert Enough/: in  slow  slow.cpp
uva/12405 - Scarecrow/: in  scare  scare.cpp
uva/1260 - Sales/: fast  fast.cpp  in  slow  slow.cpp
uva/1261 - String Popping/: in  pop  pop.cpp
uva/1262 - Password/: in  pwd  pwd.cpp
uva/183 - Bit Maps/: maps.cpp
uva/193 - Graph Coloring/: color  color.cpp
uva/401 - Palindromes/: palindromes  palindromes.cpp
uva/462 - Bridge Hand Evaluator/: evaluator  evaluator.cpp
uva/481 - What Goes Up/: down  down.cpp  in  up  up.cpp  v1.cpp  v2.cpp
uva/497 - Strategic Defense Initiative/: in  sdi  sdi.cpp
uva/524 - Prime Ring Problem/: in  ring  ring.cpp
uva/562 - Dividing coins/: coin.cpp
uva/573 - The Snail/: out  snail  snail.cpp
uva/574 - Sum It Up/: in  sum  sum.cpp
uva/599 - The Forrest for the Trees/: in  trees  trees.cpp
uva/787 - Maximum Sub-sequence Product/: auto.py  expected1  in1  in2  sub  sub.cpp
(+6 files in other folders)
